// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Move Move component after move detail is fetched 1`] = `
<DocumentFragment>
  <div
    class="move-detail"
  >
    <div
      style="line-height: 3rem;"
    >
      <span
        class="arrow"
        style="transform: rotate(0deg);"
      >
        ►
      </span>
      <span
        class="bold"
      >
        Teleport
      </span>
      <span
        style="float: right;"
      >
        <button
          class="css-xsck4j"
        >
          PSYCHIC
        </button>
      </span>
    </div>
    <div
      class="move-table-container"
      style="max-height: 0;"
    >
      <table
        class="move-table"
      >
        <thead>
          <tr>
            <td
              class="table-header-column"
            >
              Power: N/A
            </td>
            <td
              class="table-header-column"
            >
              PP: 20
            </td>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              colspan="2"
            >
              <div
                class="move-explanation"
              >
                Does nothing.  Wild battles end immediately.
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Move Move component before move detail is fetched 1`] = `
<DocumentFragment>
  <div
    class="move-detail"
  >
    <div
      style="line-height: 3rem;"
    >
      <span
        class="arrow"
        style="transform: rotate(0deg);"
      >
        ►
      </span>
      <span
        class="bold"
      >
        Teleport
      </span>
    </div>
    <div
      class="move-table-container"
      style="max-height: 0;"
    >
      <hr />
      Loading Details ...
    </div>
  </div>
</DocumentFragment>
`;
